# rs-testmeans

./: .env  .gitignore  .mypy.ini  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  testci.py
src/ADGS/: Dockerfile  adgs_station_mock.py  auth.json  load_adgs.py  pyproject.toml
src/ADGS/Catalog/: GETFileResponse.json  GETS3FileResponse.json
src/ADGS/Storage/: S2__OPER_AUX_ECMWFD_PDMC_20200216T120000_V20190217T090000_20190217T210000.TGZ  S2__OPER_AUX_ECMWFD_PDMC_20230216T120000_V20190217T090000_20190217T210000.TGZ
src/ADGS/config/: auth.json  auth_tmp.json
src/ADGS/config/Catalog/: GETFileResponse.json
src/ADGS/config/Storage/: S1A_AUX_PP2_V20200106T080000_G20200106T080000.SAFE  S1A_AUX_PP2_V20200121T080000_G20200121T080000.SAFE  S1A_AUX_PP2_V20200203T080000_G20200203T080000.SAFE  S1A_AUX_PP2_V20200218T080000_G20200218T080000.SAFE  S1A_AUX_PP2_V20200221T080000_G20200221T080000.SAFE  S1A_AUX_PP2_V20200228T080000_G20200228T080000.SAFE  S1A_AUX_PP2_V20200406T080000_G20200406T080000.SAFE  S1A_AUX_PP2_V20200413T080000_G20200413T080000.SAFE  S1A_AUX_PP2_V20200509T080000_G20200509T080000.SAFE  S1A_AUX_PP2_V20200516T080000_G20200516T080000.SAFE  S1A_AUX_PP2_V20200524T080000_G20200524T080000.SAFE  S1A_AUX_PP2_V20200623T080000_G20200623T080000.SAFE  S1A_AUX_PP2_V20200630T080000_G20200630T080000.SAFE  S1A_AUX_PP2_V20200708T080000_G20200708T080000.SAFE  S1A_AUX_PP2_V20200806T080000_G20200806T080000.SAFE  S1A_AUX_PP2_V20200920T080000_G20200920T080000.SAFE  S1A_AUX_PP2_V20230403T080000_G20230403T080000.SAFE  S1A_AUX_PP2_V20230517T080000_G20230517T080000.SAFE  S1A_AUX_PP2_V20230704T080000_G20230704T080000.SAFE  S1A_AUX_PP2_V20230818T080000_G20230818T080000.SAFE  S1A_OPER_AUX_OBMEMC_PDMC_20200127T000000.xml  S1A_OPER_AUX_OBMEMC_PDMC_20200919T000000.xml  S1A_OPER_AUX_OBMEMC_PDMC_20210123T000000.xml  S1A_OPER_AUX_OBMEMC_PDMC_20210211T000000.xml  S1A_OPER_AUX_OBMEMC_PDMC_20210329T000000.xml  S1A_OPER_AUX_OBMEMC_PDMC_20210924T000000.xml  S1A_OPER_AUX_OBMEMC_PDMC_20220115T000000.xml  S1A_OPER_AUX_OBMEMC_PDMC_20230103T000000.xml  S1A_OPER_AUX_OBMEMC_PDMC_20230216T000000.xml  S1A_OPER_AUX_OBMEMC_PDMC_20230705T000000.xml  S1A_OPER_AUX_OBMEMC_PDMC_20240106T000000.xml  S1A_OPER_AUX_PREORB_OPOD_20200325T062732_V20200325T053140_20200325T120640.EOF  S1A_OPER_AUX_PREORB_OPOD_20200418T062732_V20200418T053140_20200418T120640.EOF  S1A_OPER_AUX_PREORB_OPOD_20200524T062732_V20200524T053140_20200524T120640.EOF  S1A_OPER_AUX_PREORB_OPOD_20200729T062732_V20200729T053140_20200729T120640.EOF  S1A_OPER_AUX_PREORB_OPOD_20200822T062732_V20200822T053140_20200822T120640.EOF  S1A_OPER_AUX_PREORB_OPOD_20200903T062732_V20200903T053140_20200903T120640.EOF  S1A_OPER_AUX_PREORB_OPOD_20201002T062732_V20201002T053140_20201002T120640.EOF  S1A_OPER_AUX_PREORB_OPOD_20210106T062732_V20210106T053140_20210106T120640.EOF  S1A_OPER_AUX_PREORB_OPOD_20230122T062732_V20230122T062732_20230122T062732.EOF  (+50 more)
src/CADIP/: COMMON  Dockerfile  README.adoc  cadipStationMock.py  cadipTest.sh  cadip_station_mock.py  pyproject.toml
src/CADIP/Catalogue/: FileResponse.json  SPJ.json
src/CADIP/S3Mock/: S1A.raw  S2L1C.raw  S3.raw
src/CADIP/config/: auth.json  auth_tmp.json
src/CADIP/config/Catalogue/: FileResponse.json  S3FileResp.json  SPJ.json
src/CADIP/config/S3Mock/: DCS_01_S1A_20200105072204051312_ch1_DSDB_00000.raw  DCS_01_S1A_20200105072204051312_ch1_DSDB_00001.raw  DCS_01_S1A_20200105072204051312_ch1_DSDB_000010.raw  DCS_01_S1A_20200105072204051312_ch1_DSDB_000011.raw  DCS_01_S1A_20200105072204051312_ch1_DSDB_000012.raw  DCS_01_S1A_20200105072204051312_ch1_DSDB_000013.raw  DCS_01_S1A_20200105072204051312_ch1_DSDB_000014.raw  DCS_01_S1A_20200105072204051312_ch1_DSDB_000015.raw  DCS_01_S1A_20200105072204051312_ch1_DSDB_000016.raw  DCS_01_S1A_20200105072204051312_ch1_DSDB_000017.raw  DCS_01_S1A_20200105072204051312_ch1_DSDB_000018.raw  DCS_01_S1A_20200105072204051312_ch1_DSDB_000019.raw  DCS_01_S1A_20200105072204051312_ch1_DSDB_00002.raw  DCS_01_S1A_20200105072204051312_ch1_DSDB_000020.raw  DCS_01_S1A_20200105072204051312_ch1_DSDB_000021.raw  DCS_01_S1A_20200105072204051312_ch1_DSDB_000022.raw  DCS_01_S1A_20200105072204051312_ch1_DSDB_000023.raw  DCS_01_S1A_20200105072204051312_ch1_DSDB_000024.raw  DCS_01_S1A_20200105072204051312_ch1_DSDB_000025.raw  DCS_01_S1A_20200105072204051312_ch1_DSDB_000026.raw  DCS_01_S1A_20200105072204051312_ch1_DSDB_000027.raw  DCS_01_S1A_20200105072204051312_ch1_DSDB_000028.raw  DCS_01_S1A_20200105072204051312_ch1_DSDB_000029.raw  DCS_01_S1A_20200105072204051312_ch1_DSDB_00003.raw  DCS_01_S1A_20200105072204051312_ch1_DSDB_000030.raw  DCS_01_S1A_20200105072204051312_ch1_DSDB_000031.raw  DCS_01_S1A_20200105072204051312_ch1_DSDB_000032.raw  DCS_01_S1A_20200105072204051312_ch1_DSDB_000033.raw  DCS_01_S1A_20200105072204051312_ch1_DSDB_000034.raw  DCS_01_S1A_20200105072204051312_ch1_DSDB_000035.raw  DCS_01_S1A_20200105072204051312_ch1_DSDB_000036.raw  DCS_01_S1A_20200105072204051312_ch1_DSDB_000037.raw  DCS_01_S1A_20200105072204051312_ch1_DSDB_000038.raw  DCS_01_S1A_20200105072204051312_ch1_DSDB_000039.raw  DCS_01_S1A_20200105072204051312_ch1_DSDB_00004.raw  DCS_01_S1A_20200105072204051312_ch1_DSDB_000040.raw  DCS_01_S1A_20200105072204051312_ch1_DSDB_000041.raw  DCS_01_S1A_20200105072204051312_ch1_DSDB_000042.raw  DCS_01_S1A_20200105072204051312_ch1_DSDB_000043.raw  DCS_01_S1A_20200105072204051312_ch1_DSDB_000044.raw  (+218 more)
src/DPR/: DPRProcessor.py  DPR_processor_mock.py  Dockerfile  default_zattrs.json  dpr_simulator_ws.py  payload.yaml  product_to_zarr_url.json  pyproject.toml  s3_handler.py  workflow_part.py
src/DPR/common/: common_routes.py  s3_handler.py
src/DPR/data/S03MWRL0__20221101T092439_6037_A307_T677.zarr/: .zattrs  .zmetadata
src/DPR/data/S03OLCL0__20210629T044945_0119_A247_T219.zarr/: .zattrs  .zmetadata
src/LTA/: Dockerfile  lta_station_mock.py  pyproject.toml
src/LTA/config/Catalog/: GETQueryResponse.json
src/LTA/config/Internal/: orders.json
src/PRIP/: Dockerfile  prip_station_mock.py  pyproject.toml
src/PRIP/tests/: conftest.py  test_prip_station_mock.py
(+118 files in other folders)
