[project]
name = "rs-python"
authors = []
dynamic = ["version"]

requires-python = ">=3.11"

dependencies = [
    "Flask == 2.3.0",
    "Flask-HTTPAuth == 4.8.0",
    "Flask-Bcrypt == 1.0.1",
    "boto3 == 1.28.81",
    "botocore == 1.31.83"
    ]

[project.optional-dependencies]
tests = [
    "pytest == 7.4.3"
    ]

[tool.poetry]
name = "rs-testmeans"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "src" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.11"
flask-bcrypt = "^1.0.1"
flask-httpauth = "^4.8.0"
requests = "^2.31.0"
botocore = "1.31.83"
boto3 = "1.28.81"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
