[project]
name = "rs-python"
authors = []
dynamic = ["version"]

requires-python = ">=3.11"

dependencies = [
    "Flask == 2.3.0",
    "Flask-HTTPAuth == 4.8.0",
    "Flask-Bcrypt == 1.0.1",
    "boto3 == 1.28.85",
    "botocore == 1.31.85"
    ]


[tool.poetry]
name = "cadip-server-mockup"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flask-bcrypt = "^1.0.1"
flask-httpauth = "^4.8.0"
botocore = "1.31.83"
boto3 = "1.28.81"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
