[project]
name = "rs-python"
authors = []
dynamic = ["version"]

requires-python = ">=3.11"

[tool.poetry]
name = "dpr-processor-mockup"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
botocore = "^1.38.34"
boto3 = "^1.38.34"
requests = "2.32.4"
pyyaml = "^6.0.2"
crcmod = "^1.7"
fastapi = "^0.115.12"
uvicorn = "^0.34.3"
source = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
