[project]
name = "rs-python"
authors = []
dynamic = ["version"]

requires-python = ">=3.11"

dependencies = [
    "Flask == 3.1.1",
    "Flask-HTTPAuth == 4.8.0",
    "Flask-Bcrypt == 1.0.1"
    ]


[tool.poetry]
name = "lta-server-mockup"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flask-bcrypt = "^1.0.1"
flask-httpauth = "^4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
